[CSS] fix: change value z-index for preview photo

--- a/css/dolismq.css
+++ b/css/dolismq.css
@@ -1933,7 +1933,7 @@
 }
 
 .preview-photo {
-  z-index: 1003 !important;
+  z-index: 2100 !important;
 }
 
 .imgTabTitle {
